# Send-SMS-Infrastructure

./: README.md  pyproject.toml
src/: .env.dist
src/clients/: admin.py  models.py  serializers.py  urls.py  views.py
src/clients/migrations/: 0001_initial.py
src/letters/: admin.py  models.py  serializers.py  urls.py  views.py
src/letters/migrations/: 0001_initial.py
src/mailings/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/mailings/migrations/: 0001_initial.py
src/project_settings/: celery.py  settings.py
src/project_settings/urls/: api_urls.py  base.py
src/users/: admin.py  backends.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
